@@ -9,8 +9,9 @@ Hadoop ETL: added support for 3 and 4 return values from MapTransformer (#324)
 Hadoop ETL: updated GetJsonPayload to use Argonaut and renamed to JsonPayload (#339)
 Hadoop ETL: added ability to mask IP addresses in ETL (#309)
 Hadoop ETL: defensively fixed raw spaces in page and referer URLs (#346)
+Hadoop ETL: fixed regression, single-encoded %s didn't account for % itself (#347)
 
-Hadoop ETL: fixed unescaped % in URL is converted to \00 and breaks Postgres load (#347) - TODO
+Hadoop ETL: now handling double-encoded cs(User Agent) as per CloudFront post-14-September (#348) - TODO
 
 EmrEtlRunner: bumped to 0.5.0
 EmrEtlRunner: bumped Sluice to 0.1.3 (#96)
